refactorización en el parse de datos y cambio en algunas estrategias